Created Random For Loop with Allow

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Need A New Random Password.  No Problems.  Click Button Below."
             aria-label="Generated Password"
           ></textarea>
         </div>
